Update create and destroy scripts
Signed-off-by: Jelmergu <github@jelmerwijnja.nl>

--- a/front-end/public/nieuweSpeler.html
+++ b/front-end/public/nieuweSpeler.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nieuwe Ronde maken</title>
+    <title>Niewe speler toevoegen</title>
 </head>
 <body>
 <aside>
@@ -36,35 +36,63 @@
     </ul>
 </aside>
 <main>
+    <h1>Nieuw speler toevoegen</h1>
     <table>
         <tr>
+            <td>Voornaam speler</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Achternaam speler</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Adres</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Postcode</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Stad</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Geboortedatum</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Email adres</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Vereniging</td>
+        </tr>
+        <tr>
             <td>
-                Ronde Type Selecteren <select>
-                <option>-- Kies rondetype --</option>
-                <option value="roundRobin">Round Robin</option>
-                <option value="bracket">Bracket</option>
-            </select>
+                <select>
+                    <option>Geen vereniging</option>
+                    <option>SV. Horst</option>
+                </select>
             </td>
         </tr>
         <tr>
-            <td>Poule grootte</td>
-        </tr>
-        <tr>
-            <td><input type="number"></td>
-        </tr>
-        <tr>
-            <td>Ronde gebaseerd op:</td>
-        </tr>
-        <tr>
-            <td><label><input type="radio"> Op vereniging</label><br/> <label><input type="radio"> Op punten van <select>
-                <option>-- Kies een ronde --</option>
-                <option value="ronde1">Ronde 1</option>
-                <option value="ronde2">Ronde 2</option>
-            </select> </label>
-            </td>
-        </tr>
-        <tr>
-            <td>Maak ronde</td>
+            <td><input type="submit"></td>
         </tr>
     </table>
 </main>
