--- a/front-end/public/toernooiSpelerToevoegen.html
+++ b/front-end/public/toernooiSpelerToevoegen.html
@@ -105,7 +105,7 @@
             <td><input type="checkbox"></td>
         </tr>
     </table>
-    <input type="submit"> <button>Voeg nieuwe speler toe</button>
+    <input type="submit"> <a href="/nieuweSpeler.html"><button>Voeg nieuwe speler toe</button></a>
 </main>
 </body>
 </html>
