--- a/front-end/public/verenigingToevoegen.html
+++ b/front-end/public/verenigingToevoegen.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nieuwe Ronde maken</title>
+    <title>Vereniging toevoegen</title>
 </head>
 <body>
 <aside>
@@ -36,35 +36,52 @@
     </ul>
 </aside>
 <main>
+    <h1>Vereniging toevoegen</h1>
     <table>
         <tr>
-            <td>
-                Ronde Type Selecteren <select>
-                <option>-- Kies rondetype --</option>
-                <option value="roundRobin">Round Robin</option>
-                <option value="bracket">Bracket</option>
-            </select>
-            </td>
+            <td>Naam schaakclub</td>
         </tr>
         <tr>
-            <td>Poule grootte</td>
+            <td><input type="text"></td>
         </tr>
         <tr>
-            <td><input type="number"></td>
+            <td>City</td>
         </tr>
         <tr>
-            <td>Ronde gebaseerd op:</td>
+            <td><input type="text"></td>
         </tr>
         <tr>
-            <td><label><input type="radio"> Op vereniging</label><br/> <label><input type="radio"> Op punten van <select>
-                <option>-- Kies een ronde --</option>
-                <option value="ronde1">Ronde 1</option>
-                <option value="ronde2">Ronde 2</option>
-            </select> </label>
-            </td>
+            <td>Adres</td>
         </tr>
         <tr>
-            <td>Maak ronde</td>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Postcode</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Voorzitter</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Secretaris</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Email adres</td>
+        </tr>
+        <tr>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td><input type="submit"></td>
         </tr>
     </table>
 </main>
