Correct typo in Creeer
Signed-off-by: Jelmergu <github@jelmerwijnja.nl>

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li>
             <a href="/index.html">
-                <button>Cree&euml;r toernooi</button>
+                <button>Cre&euml;er toernooi</button>
             </a>
         </li>
         <li>
@@ -36,7 +36,7 @@
     </ul>
 </aside>
 <main>
-    <h1>Cree&euml;r toernooi</h1>
+    <h1>Cre&euml;er toernooi</h1>
     <table>
         <tr>
             <td>Naam Toernooi</td>
