--- a/front-end/public/nieuweRonde.html
+++ b/front-end/public/nieuweRonde.html
@@ -9,7 +9,7 @@
     <ul>
         <li>
             <a href="/index.html">
-                <button>Cree&euml;r toernooi</button>
+                <button>Cre&euml;er toernooi</button>
             </a>
         </li>
         <li>
