--- a/front-end/public/toernooiInfo.html
+++ b/front-end/public/toernooiInfo.html
@@ -66,7 +66,7 @@
             <td>Adres</td>
         </tr>
         <tr>
-            <td><input type="text">Ruitenberglaan 26</td>
+            <td><input type="text" value="Ruitenberglaan 26"></td>
         </tr>
         <tr>
             <td>Postcode</td>
