--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Creeer toernooi</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-<aside>
+    <div class="container-fluid">
+        
+    </div>
+
+              
+
+<div class="container-fluid">
     <ul>
         <li>
             <a href="/index.html">
@@ -34,7 +42,9 @@
             </a>
         </li>
     </ul>
-</aside>
+</div>
+
+
 <main>
     <h1>Cre&euml;er toernooi</h1>
     <table>
