--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -1,105 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Creeer toernooi</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="container-fluid">
-        
+        <div class="row">
+            <div class="col-3 menu">
+                <ul class="list-group list-dark">
+                    <li class="list-group-item list-group-item-dark">
+                        Schaaktoernooi applicatie
+                    </li>
+                    <li class="list-group-item list-group-item-light">
+                        <a class="btn btn-dark btn-menu active" href="index.html" role="button" aria-pressed="true">Cre&euml;er toernooi</a>
+                    </li>
+                    <li class="list-group-item list-group-item-light">
+                        <select name="asideToernooi" class="custom-select" id="asideToernooi">
+                            <option selected>Kies een schaaktoernooi</option>
+                            <option value="1">1ste schaaktoernooi</option>
+                            <option value="2">2de schaaktoernooi</option>
+                        </select>
+                    </li>
+                    <li class="list-group-item list-group-item-light">
+                        <a class="btn btn-dark btn-menu" href="toernooiInfo.html" role="button">Toernooi Info</a>
+                    </li>
+                    <li class="list-group-item list-group-item-light">
+                        <a class="btn btn-dark btn-menu" href="toernooiSpelerToevoegen.html" role="button">Voeg spelers
+                            toe</a>
+                    </li>
+                    <li class="list-group-item list-group-item-light">
+                        <a class="btn btn-dark btn-menu" href="manageRondes.html" role="button">Manage rondes</a>
+                    </li>
+                    <li class="list-group-item list-group-item-light">
+                            <a class="btn btn-dark btn-menu" href="schaakclubToevoegen.html" role="button">Voeg schaakclub toe</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-9 main-page">
+
+                <div class="card">
+                    <div class="card-header bg-dark">
+                        Cre&euml;er toernooi
+                    </div>
+                    <div class="card-body card-body-scroll">
+                        <form>
+                            <div class="form-group">
+                                <label for="tournamentName">Naam Toernooi *</label>
+                                <input type="text" class="form-control" id="tournamentName"
+                                    placeholder="Vul de toernooinaam in" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="startTime">Starttijd *</label>
+                                <input type="datetime-local" class="form-control" id="startTime"
+                                    placeholder="Vul de starttijd in" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="endTime">Eindtijd</label>
+                                <input type="datetime-local" class="form-control" id="endTime"
+                                    placeholder="Vul de eindtijd in">
+                            </div>
+                            <div class="form-group">
+                                <label for="registrationFee">Inschrijfgeld *</label>
+                                <input type="number" class="form-control" id="registrationFee"
+                                    placeholder="Vul het bedrag in" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="address">Adres *</label>
+                                <input type="text" class="form-control" id="address"
+                                    placeholder="Vul het adress in van de locatie van het toernooi" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="postalcode">Postcode *</label>
+                                <input type="text" class="form-control" id="postalcode"
+                                    placeholder="Vul de postcode in van de locatie van het toernooi" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="city">Stad *</label>
+                                <input type="text" class="form-control" id="city"
+                                    placeholder="Vul de postcode in van de locatie van het toernooi" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="registrationDeadline">Registratie Tijdsgrens *</label>
+                                <input type="datetime-local" class="form-control" id="registrationDeadline"
+                                    placeholder="Vul de uiterlijke tijd van inschrijving in." required>
+                            </div>
+                            <div class="form-group">
+                                <label for="city">Stad *</label>
+                                <input type="text" class="form-control" id="city"
+                                    placeholder="Vul de postcode in van de locatie van het toernooi" required>
+                            </div>
+
+
+                            <button type="submit" class="btn btn-dark">Maak toernooi aan</button>
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
-              
-
-<div class="container-fluid">
-    <ul>
-        <li>
-            <a href="/index.html">
-                <button>Cre&euml;er toernooi</button>
-            </a>
-        </li>
-        <li>
-            <select name="asideToernooi" id="asideToernooi">
-                <option value="1">1ste schaaktoernooi</option>
-                <option value="2">2de schaaktoernooi</option>
-            </select>
-        </li>
-        <li>
-            <a href="/toernooiInfo.html">
-                <button>Toernooi Info</button>
-            </a>
-        </li>
-        <li>
-            <a href="/toernooiSpelerToevoegen.html">
-                <button>Voeg spelers toe</button>
-            </a>
-        </li>
-        <li>
-            <a href="/manageRondes.html">
-                <button>Manage rondes</button>
-            </a>
-        </li>
-    </ul>
-</div>
-
-
-<main>
-    <h1>Cre&euml;er toernooi</h1>
-    <table>
-        <tr>
-            <td>Naam Toernooi</td>
-        </tr>
-        <tr>
-            <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td>Starttijd</td>
-        </tr>
-        <tr>
-            <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td>Eindtijd</td>
-        </tr>
-        <tr>
-            <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td>Inschrijfgeld</td>
-        </tr>
-        <tr>
-            <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td>Adres</td>
-        </tr>
-        <tr>
-            <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td>Postcode</td>
-        </tr>
-        <tr>
-            <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td>Stad</td>
-        </tr>
-        <tr>
-            <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td>Registratie Tijdsgrens</td>
-        </tr>
-        <tr>
-            <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td><input type="submit"></td>
-        </tr>
-    </table>
-</main>
 </body>
+
 </html>
