Added pages: editToernooiInfo.html, nieuweSpeler.html, toernooiInfo.html

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -34,7 +34,7 @@
                         <a class="btn btn-dark btn-menu" href="toernooiInfo.html" role="button">Toernooi Info</a>
                     </li>
                     <li class="list-group-item list-group-item-light">
-                        <a class="btn btn-dark btn-menu" href="toernooiSpelerToevoegen.html" role="button">Voeg spelers
+                        <a class="btn btn-dark btn-menu" href="toernooiSpelerToevoegen.html" role="button">Voeg toernooispelers
                             toe</a>
                     </li>
                     <li class="list-group-item list-group-item-light">
@@ -72,7 +72,7 @@
                             <div class="form-group">
                                 <label for="registrationFee">Inschrijfgeld *</label>
                                 <input type="number" class="form-control" id="registrationFee"
-                                    placeholder="Vul het bedrag in" required>
+                                    placeholder="Vul het bedrag in" step=".01" required>
                             </div>
                             <div class="form-group">
                                 <label for="address">Adres *</label>
@@ -87,17 +87,12 @@
                             <div class="form-group">
                                 <label for="city">Stad *</label>
                                 <input type="text" class="form-control" id="city"
-                                    placeholder="Vul de postcode in van de locatie van het toernooi" required>
+                                    placeholder="Vul de stad in van de locatie van het toernooi" required>
                             </div>
                             <div class="form-group">
                                 <label for="registrationDeadline">Registratie Tijdsgrens *</label>
                                 <input type="datetime-local" class="form-control" id="registrationDeadline"
                                     placeholder="Vul de uiterlijke tijd van inschrijving in." required>
-                            </div>
-                            <div class="form-group">
-                                <label for="city">Stad *</label>
-                                <input type="text" class="form-control" id="city"
-                                    placeholder="Vul de postcode in van de locatie van het toernooi" required>
                             </div>
 
 
