--- a/front-end/public/schaakclubToevoegen.html
+++ b/front-end/public/schaakclubToevoegen.html
@@ -34,14 +34,14 @@
                         <a class="btn btn-dark btn-menu" href="toernooiInfo.html" role="button">Toernooi Info</a>
                     </li>
                     <li class="list-group-item list-group-item-light">
-                        <a class="btn btn-dark btn-menu active" href="toernooiSpelerToevoegen.html" role="button" aria-pressed="true">Voeg toernooispelers
+                        <a class="btn btn-dark btn-menu" href="toernooiSpelerToevoegen.html" role="button" >Voeg toernooispelers
                             toe</a>
                     </li>
                     <li class="list-group-item list-group-item-light">
                         <a class="btn btn-dark btn-menu" href="manageRondes.html" role="button">Manage rondes</a>
                     </li>
                     <li class="list-group-item list-group-item-light">
-                            <a class="btn btn-dark btn-menu" href="schaakclubToevoegen.html" role="button">Voeg schaakclub toe</a>
+                            <a class="btn btn-dark btn-menu active" href="schaakclubToevoegen.html" role="button" aria-pressed="true">Voeg schaakclub toe</a>
                     </li>
                 </ul>
             </div>
