--- a/front-end/public/temp.html
+++ b/front-end/public/temp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Niewe speler toevoegen</title>
+    <title>Vereniging toevoegen</title>
 </head>
 <body>
 <aside>
@@ -36,16 +36,16 @@
     </ul>
 </aside>
 <main>
-    <h1>Nieuw speler toevoegen</h1>
+    <h1>Vereniging toevoegen</h1>
     <table>
         <tr>
-            <td>Voornaam speler</td>
+            <td>Naam schaakclub</td>
         </tr>
         <tr>
             <td><input type="text"></td>
         </tr>
         <tr>
-            <td>Achternaam speler</td>
+            <td>City</td>
         </tr>
         <tr>
             <td><input type="text"></td>
@@ -63,13 +63,13 @@
             <td><input type="text"></td>
         </tr>
         <tr>
-            <td>Stad</td>
+            <td>Voorzitter</td>
         </tr>
         <tr>
             <td><input type="text"></td>
         </tr>
         <tr>
-            <td>Geboortedatum</td>
+            <td>Secretaris</td>
         </tr>
         <tr>
             <td><input type="text"></td>
@@ -79,17 +79,6 @@
         </tr>
         <tr>
             <td><input type="text"></td>
-        </tr>
-        <tr>
-            <td>Vereniging</td>
-        </tr>
-        <tr>
-            <td>
-                <select>
-                    <option>Geen vereniging</option>
-                    <option>SV. Horst</option>
-                </select>
-            </td>
         </tr>
         <tr>
             <td><input type="submit"></td>
