--- a/front-end/public/schaakclubToevoegen.html
+++ b/front-end/public/schaakclubToevoegen.html
@@ -50,55 +50,38 @@
 
                 <div class="card">
                     <div class="card-header bg-dark">
-                        Voeg een nieuwe speler toe
+                        Voeg een nieuwe schaakclub toe
                     </div>
                     <div class="card-body card-body-scroll">
                         <form>
                             <div class="form-group">
-                                <label for="firstName">Voornaam speler *</label>
+                                <label for="firstName">Naam schaakclub *</label>
                                 <input type="text" class="form-control" id="firstName"
-                                    placeholder="Vul de voornaam van de speler in" required>
+                                    placeholder="Vul de naam van de schaakclub in" required>
                             </div>
                             <div class="form-group">
-                                <label for="lastName">Achternaam speler *</label>
-                                <input type="datetime-local" class="form-control" id="lastName"
-                                    placeholder="Vul de achternaam van de speler in" required>
-                            </div>
+                                    <label for="city">Stad *</label>
+                                    <input type="text" class="form-control" id="city"
+                                        placeholder="Vul de stad in van de locatie van de schaakclub" required>
+                                </div>
                             <div class="form-group">
                                 <label for="address">Adres *</label>
                                 <input type="text" class="form-control" id="address"
-                                    placeholder="Vul het adress in van de locatie van het toernooi" required>
+                                    placeholder="Vul het adress in van de locatie van de schaakclub" required>
                             </div>
                             <div class="form-group">
                                 <label for="postalcode">Postcode *</label>
                                 <input type="text" class="form-control" id="postalcode"
-                                    placeholder="Vul de postcode in van de locatie van het toernooi" required>
+                                    placeholder="Vul de postcode in van de locatie van de schaakclub" required>
                             </div>
-                            <div class="form-group">
-                                <label for="city">Stad *</label>
-                                <input type="text" class="form-control" id="city"
-                                    placeholder="Vul de stad in van de locatie van het toernooi" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="birthdate">Geboortedatum *</label>
-                                <input type="date" class="form-control" id="birthdate"
-                                    placeholder="Vul de geboortedatum van de speler in." required>
-                            </div>
+
                             <div class="form-group">
                                     <label for="emailAddress">Emailadres *</label>
                                     <input type="email" class="form-control" id="emailAddress"
-                                        placeholder="Vul het emailadres van de speler in" required>
-                            </div>
-                            <div class="form-group">
-                                    <label for="city">Schaakclub *</label>
-                                    <select class="custom-select mr-sm-2" id="city" required>
-                                            <option value="" selected disabled>Kies een schaakclub</option>
-                                            <option value="1">Schaakclub Horst</option>
-                                            <option value="2">Schaakclub Tilburg</option>
-                                    </select>
+                                        placeholder="Vul het emailadres van de schaakclub in" required>
                             </div>
 
-                            <a class="btn btn-dark" type="submit" href="toernooiSpelerToevoegen.html" role="button">Voeg speler toe</a>
+                            <button type="submit" class="btn btn-dark">Maak schaakclub aan</button>
                         </form>
 
                     </div>
