--- a/front-end/public/toernooiInfo.html
+++ b/front-end/public/toernooiInfo.html
@@ -50,7 +50,7 @@
 
                 <div class="card">
                     <div class="card-header bg-dark">
-                        Cre&euml;er toernooi
+                        Toernooi info
                     </div>
                     <div class="card-body card-body-scroll">
                         <form>
