--- a/front-end/public/temp.html
+++ b/front-end/public/temp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vereniging toevoegen</title>
+    <title>Manage rondes</title>
 </head>
 <body>
 <aside>
@@ -19,12 +19,12 @@
             </select>
         </li>
         <li>
-            <a href="/toernooiInfo.html">
+            <a href="/toernooiSpelerToevoegen.html">
                 <button>Toernooi Info</button>
             </a>
         </li>
         <li>
-            <a href="/toernooiSpelerToevoegen.html">
+            <a href="/spelerToevoegen.html">
                 <button>Voeg spelers toe</button>
             </a>
         </li>
@@ -36,53 +36,87 @@
     </ul>
 </aside>
 <main>
-    <h1>Vereniging toevoegen</h1>
-    <table>
+    <h1>1ste schaaktoernooi</h1>
+    <a href="/nieuweRonde.html"><button>Maak nieuwe ronde</button></a>
+    <table class="poule">
         <tr>
-            <td>Naam schaakclub</td>
+            <th colspan="2">Poule 1</th>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <td>1</td>
+            <td>Speler 1</td>
         </tr>
         <tr>
-            <td>City</td>
+            <td>2</td>
+            <td>Speler 2</td>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <td>3</td>
+            <td>Speler 3</td>
         </tr>
         <tr>
-            <td>Adres</td>
+            <td>4</td>
+            <td>Speler 4</td>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <th colspan="2">Poule 2</th>
         </tr>
         <tr>
-            <td>Postcode</td>
+            <td>1</td>
+            <td>Speler 1</td>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <td>2</td>
+            <td>Speler 2</td>
         </tr>
         <tr>
-            <td>Voorzitter</td>
+            <td>3</td>
+            <td>Speler 3</td>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <td>4</td>
+            <td>Speler 4</td>
         </tr>
         <tr>
-            <td>Secretaris</td>
+            <th colspan="2">Poule 3</th>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <td>1</td>
+            <td>Speler 1</td>
         </tr>
         <tr>
-            <td>Email adres</td>
+            <td>2</td>
+            <td>Speler 2</td>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <td>3</td>
+            <td>Speler 3</td>
         </tr>
         <tr>
-            <td><input type="submit"></td>
+            <td>4</td>
+            <td>Speler 4</td>
         </tr>
+        <tr>
+            <th colspan="2">Poule 4</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Speler 1</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Speler 2</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Speler 3</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Speler 4</td>
+        </tr>
+    </table>
+
     </table>
 </main>
 </body>
