--- a/front-end/public/manageRondes.html
+++ b/front-end/public/manageRondes.html
@@ -65,8 +65,8 @@
                             </select>
 
                             <a class="btn btn-dark poules" href="editRonde.html" role="button">Edit</a>
-                            <a class="btn btn-dark poules" href="" role="button">Maak een nieuwe ronde</a>
-                            <a class="btn btn-dark poules" href="" role="button">Vul resultaten ronde in</a>
+                            <a class="btn btn-dark poules" href="nieuweRonde.html" role="button">Maak een nieuwe ronde</a>
+                            <a class="btn btn-dark poules" href="insertResults.html" role="button">Vul resultaten ronde in</a>
                             <a class="btn btn-dark poules" href="" role="button">Print poules</a>
                             <a class="btn btn-dark poules" href="" role="button">Print resultaten</a>
                         </div>
